argocd/media/server/musicseerr/musicseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musicseerr
  template:
    metadata:
      labels:
        app: musicseerr
    spec:
      securityContext:
        runAsUser: 1000 
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: musicseerr
        image: ghcr.io/habirabbu/musicseerr
        volumeMounts:
        - name: config
          mountPath: /app/config
          subPath: config
        - name: config
          mountPath: /app/cache
          subPath: cache
        ports:
        - containerPort: 8688
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: musicseerr-config
