argocd/media/server/musicseerr/musicseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicseerr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8688
  selector:
    app: musicseerr
